--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -1,6 +1,9 @@
 footer {
     background-color: #CC4E5C;
     text-align: center;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
     padding: 15px 0px 15px 0px;
 }
 
