--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.cdnfonts.com/css/grammatika');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Grammatika', sans-serif;
     box-sizing: border-box;
 }
 
